# murchace

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  dodo.py  go.mod  index.templ  index_templ.go  justfile  main.go  pyproject.toml  tailwind.config.js
.devcontainer/: Dockerfile  devcontainer.json  docker-vscode.md
.github/: PULL_REQUEST_TEMPLATE.md  README.md  docker-vscode.md
.github/ISSUE_TEMPLATE/: 1-bug-report.md  2-feature-request.md
.github/workflows/: CI.yaml  devcontainer.yaml  prodcontainer.yaml
app/: db.py  env.py  input.css  main.py  styles.css  templates.py  test_templates.py
app/db/: __init__.py  placement.py
app/routers/: order.py  ordered_products.py  orders.py  placements.py  products.py  register.py  stat.py  test_orders.py  test_placements.py  test_stat.py
app/store/: __init__.py  _helper.py  base.py  order.py  ordered_item.py  placed_item.py  placement.py  product.py  test__init__.py  test_product.py
app/templates/: canceled-placements.html  completed-placements.html  hello.html  hx-post.html  incoming-orders.html  incoming-placements.html  index.html  layout.html  order.html  ordered-items-incoming.html  orders.html  placed-items-incoming.html  placements.html  products.html  register.html  resolved-orders.html  resolved-placements.html  stat.html  wait-estimate.html  wait-estimates.html
app/templates/components/: clock.html  incoming-placements.html  item.html  list-item.html  order-confirm.html  order-issued.html  order-published.html  order-session.html  placements.html  product-editor.html
app/templates/macros/: clock.html
components/: hello.templ  hello_templ.go  hello_templ.txt  layout.templ  layout_templ.go  layout_templ.txt  order.templ  order_templ.go
db/: env.py
db/versions/: 74640061af2b_init_base_revision.py  7c49a7072ca5_init_base_revision.py  b260a0b3e3c6_rename_placements_and_placed_items_.py
docs/: architecture.md  docker-vscode.md  readme.md  style.md
handlers/: get_order.go
static/: product-list.csv  styles.css  styles.min.css
tasks/: .gitignore  tailwindcss.py  task_dict.py
