[project]
name = "murchace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.5",
    "jinja2>=3.1.4",
    "databases[aiosqlite]>=0.9.0",
    "sqlmodel>=0.0.22",
    "sse-starlette>=2.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["/app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "inline-snapshot>=0.13.1",
    "pyright>=1.1.381",
    "pytailwindcss>=0.2.0",
    "ruff>=0.6.7",
    "djlint>=1.35.2",
    "sqlparse>=0.5.1",
    "doit>=0.36.0",
]

[tool.doit]
backend = "sqlite3"
dep_file = ".doit.db"

[tool.doit.commands.list]
status = true
subtasks = true
sort = "definition"

[tool.ruff]

[tool.pyright]
